  * Fix passing --uuid to git-annex-shell.
  * When shaNsum commands cannot be found, use the Haskell SHA library
    (already a dependency) to do the checksumming. This may be slower,
    but avoids portability problems.
  * Use SHA library for files less than 50 kb in size, at which point it's
    faster than forking the more optimised external program.

 -- Joey Hess <joeyh@debian.org>  Sun, 01 Jul 2012 15:04:37 -0400

git-annex (3.20120629) unstable; urgency=low

  * cabal: Only try to use inotify on Linux.
  * Version build dependency on STM, and allow building without it,
    which disables the watch command.
  * Avoid ugly failure mode when moving content from a local repository
    that is not available.
  * Got rid of the last place that did utf8 decoding.
  * Accept arbitrarily encoded repository filepaths etc when reading
    git config output. This fixes support for remotes with unusual characters
    in their names.
  * sync: Automatically resolves merge conflicts.

 -- Joey Hess <joeyh@debian.org>  Fri, 29 Jun 2012 10:17:49 -0400

git-annex (3.20120624) unstable; urgency=low

  * watch: New subcommand, a daemon which notices changes to
    files and automatically annexes new files, etc, so you don't
    need to manually run git commands when manipulating files.
    Available on Linux, BSDs, and OSX!
  * Enable diskfree on kfreebsd, using kqueue.
  * unused: Fix crash when key names contain invalid utf8.
  * sync: Avoid recent git's interactive merge.

 -- Joey Hess <joeyh@debian.org>  Sun, 24 Jun 2012 12:36:50 -0400

git-annex (3.20120614) unstable; urgency=medium

  * addurl: Was broken by a typo introduced 2 released ago, now fixed.
    Closes: #677576
  * Install man page when run by cabal, in a location where man will
    find it, even when installing under $HOME. Thanks, Nathan Collins

 -- Joey Hess <joeyh@debian.org>  Thu, 14 Jun 2012 20:21:29 -0400

git-annex (3.20120611) unstable; urgency=medium
